src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <controllingField>Status_Final__c</controllingField>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <picklist>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutual Funds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Number__c</fullName>
        <label>Loan Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPUID__c</fullName>
        <label>MPUID</label>
        <referenceTo>MPUID__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityOriginator__c</fullName>
        <label>Opportunity Originator</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aggregator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propensity Score</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statefarm.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <description>Field Used for Batch Apex</description>
        <label>Opportunity Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteDuplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuoteReceivedDate__c</fullName>
        <label>Quote Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestId__c</fullName>
        <label>Request Id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RiskInformation__c</fullName>
        <label>Risk Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SaveAndRetrieve__c</fullName>
        <label>Save And Retrieve</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status_Detail__c</fullName>
        <label>Status Detail</label>
        <picklist>
            <controllingField>Sub_Status__c</controllingField>
            <picklistValues>
                <fullName>Initial -1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial -2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Started -1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Started -2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won - Happy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won - Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected - Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected - Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Final__c</fullName>
        <label>Status Final</label>
        <picklist>
            <controllingField>Status_Detail__c</controllingField>
            <picklistValues>
                <fullName>Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <picklist>
            <controllingField>Opportunity_Status__c</controllingField>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
</CustomObject>